@@ -27,6 +27,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
 import java.util.Collection;
+import java.util.List;
 
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -34,8 +35,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-
-import com.google.common.collect.ImmutableList;
 
 import io.wcm.handler.commons.dom.Div;
 import io.wcm.handler.media.spi.MediaSource;
@@ -110,7 +109,7 @@ class MediaTest {
 
     Rendition rendition1 = mock(Rendition.class);
     Rendition rendition2 = mock(Rendition.class);
-    Collection<Rendition> renditions = ImmutableList.of(rendition1, rendition2);
+    Collection<Rendition> renditions = List.of(rendition1, rendition2);
     underTest.setRenditions(renditions);
 
     assertSame(rendition1, underTest.getRendition());
